debug view location

--- a/serve/index.html
+++ b/serve/index.html
@@ -7,26 +7,12 @@
     <script type="text/javascript" src="./contextmenu.js"></script>
     <link type="text/css" rel="stylesheet" href="./contextmenu.css">
     <link type="text/css" rel="stylesheet" href="./index.css">
-    <style>
 
-        .big{
-            width: 2048px;
-            height: 2048px;
-            background: #aaaaaa;
-        }
-
-    </style>
 </head>
 <body>
 
-<div class="big">
+<div class="root">
 
-    <div style="width:50%;height: 100%;background: white">
-
-    </div>
-    <div style="width:50%;height: 100%; background: black">
-
-    </div>
     Web is Running !
 
 </div>
