--- a/serve/index.html
+++ b/serve/index.html
@@ -14,7 +14,7 @@
             <h1>
                 Web Serve is Running !
             </h1>
-            <h5>HomePage: <a href="https://github.com/HtmlOS/contextmenu">Html@ContextMenu</a></h5>
+            <h5>HomePage: <a href="https://github.com/HtmlOS/contextmenu">ContextMenu@HtmlOS</a></h5>
 
             <div class="menu-demo">
                 <div class="menu-options">
