update inner style

--- a/serve/index.html
+++ b/serve/index.html
@@ -9,7 +9,7 @@
         <link type="text/css" rel="stylesheet" href="./index.css" />
     </head>
 
-    <body>
+    <body class="gravity_center">
         <h1>
             Web Serve is Running !
         </h1>
