fixed ie compatibility

--- a/serve/index.html
+++ b/serve/index.html
@@ -15,14 +15,15 @@
         </h1>
         <h5>HomePage: <a href="https://github.com/HtmlOS/contextmenu">ContextMenu@HtmlOS</a></h5>
 
-        <div class="menu-options">
+        <div>
             <form>
                 Theme ：
-                <input type="radio" name="theme" value="" checked="true" /> Default
-                <input type="radio" name="theme" value="light" /> Light
-                <input type="radio" name="theme" value="dark" /> Dark
+                <input id="radio_default" type="radio" name="theme" value="" checked="true" /> Default
+                <input id="radio_light" type="radio" name="theme" value="light" /> Light
+                <input id="radio_dark" type="radio" name="theme" value="dark" /> Dark
             </form>
         </div>
+        
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
