update demo with multi langs'

--- a/serve/index.html
+++ b/serve/index.html
@@ -16,14 +16,21 @@
         <h5>HomePage: <a href="https://github.com/HtmlOS/contextmenu">ContextMenu@HtmlOS</a></h5>
 
         <div>
+            <p></p>
             <form>
                 Theme ：
                 <input id="radio_default" type="radio" name="theme" value="" checked="true" /> Default
                 <input id="radio_light" type="radio" name="theme" value="light" /> Light
                 <input id="radio_dark" type="radio" name="theme" value="dark" /> Dark
             </form>
+            <p></p>
+            <form>
+                Language ：
+                <input id="radio_en" type="radio" name="lang" value="en" checked="true" /> English
+                <input id="radio_zh" type="radio" name="lang" value="zh" /> 中文
+            </form>
         </div>
-        
+
         <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
