--- a/serve/index.html
+++ b/serve/index.html
@@ -4,12 +4,12 @@
         <title>ContextMenu</title>
 
         <meta charset="UTF-8" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <meta http-equiv="Expires" content="0">
-        <meta http-equiv="Pragma" content="no-cache">
-        <meta http-equiv="Cache-control" content="no-cache">
-        <meta http-equiv="Cache" content="no-cache">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=8" />
+        <meta http-equiv="Expires" content="0" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Cache-control" content="no-cache" />
+        <meta http-equiv="Cache" content="no-cache" />
 
         <script type="text/javascript" src="./contextmenu.js"></script>
         <link type="text/css" rel="stylesheet" href="./contextmenu.css" />
@@ -25,16 +25,22 @@
         <div>
             <p></p>
             <form>
-                Theme ：
-                <input id="radio_default" type="radio" name="theme" value="" checked="true" /> Default
-                <input id="radio_light" type="radio" name="theme" value="light" /> Light
-                <input id="radio_dark" type="radio" name="theme" value="dark" /> Dark
+                Language ：
+                <input id="radio_lang_en" type="radio" name="lang" value="en" checked="true" /> English
+                <input id="radio_lang_zh" type="radio" name="lang" value="zh" /> 中文
             </form>
             <p></p>
             <form>
-                Language ：
-                <input id="radio_en" type="radio" name="lang" value="en" checked="true" /> English
-                <input id="radio_zh" type="radio" name="lang" value="zh" /> 中文
+                Theme ：
+                <input id="radio_theme_default" type="radio" name="theme" value="" checked="true" /> Default
+                <input id="radio_theme_light" type="radio" name="theme" value="light" /> Light
+                <input id="radio_theme_dark" type="radio" name="theme" value="dark" /> Dark
+            </form>
+            <p></p>
+            <form>
+                Animation ：
+                <input id="radio_animate_none" type="radio" name="animation" value="" checked="true" /> None
+                <input id="radio_animate_fade" type="radio" name="animation" value="fade" /> Fade
             </form>
         </div>
 
