--- a/serve/index.html
+++ b/serve/index.html
@@ -11,9 +11,9 @@
         <meta http-equiv="Cache-control" content="no-cache" />
         <meta http-equiv="Cache" content="no-cache" />
 
-        <script type="text/javascript" src="./contextmenu.js"></script>
-        <link type="text/css" rel="stylesheet" href="./contextmenu.css" />
         <link type="text/css" rel="stylesheet" href="./index.css" />
+        <link type="text/css" rel="stylesheet" href="../dist/contextmenu.css" />
+        <script type="text/javascript" src="../dist/contextmenu.js"></script>
     </head>
 
     <body class="gravity_center">
