--- a/serve/index.html
+++ b/serve/index.html
@@ -14,6 +14,8 @@
         <link type="text/css" rel="stylesheet" href="./index.css" />
         <link type="text/css" rel="stylesheet" href="../dist/contextmenu.css" />
         <script type="text/javascript" src="../dist/contextmenu.js"></script>
+        
+        <script defer src="https://umami.harmonychaos.com/vivoghiRoo2eiRu7" data-website-id="abc47672-0e7c-4b21-9eaf-534e2c1f1540"></script>
     </head>
 
     <body class="gravity_center">
