--- a/serve/index.html
+++ b/serve/index.html
@@ -15,7 +15,8 @@
         <link type="text/css" rel="stylesheet" href="../dist/contextmenu.css" />
         <script type="text/javascript" src="../dist/contextmenu.js"></script>
         
-        <script defer src="https://umami.harmonychaos.com/vivoghiRoo2eiRu7" data-website-id="abc47672-0e7c-4b21-9eaf-534e2c1f1540"></script>
+        <script defer src="https://umami.harmonychaos.com/thagh0ue3Je1oSo2" data-website-id="1e7ca1a1-69b5-4b48-a5d9-a92f8341c02f"></script>
+        
     </head>
 
     <body class="gravity_center">
